--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/waddaboo"
   },
   "scripts": {
+    "build": "env-cmd -f .env.production.local craco build",
     "local": "env-cmd -f .env.local craco start"
   },
   "eslintConfig": {
@@ -39,6 +40,8 @@
     "@types/react-dom": "^18.2.18",
     "antd": "5.13.1",
     "craco-less": "3.0.1",
+    "dotenv": "16.4.1",
+    "dotenv-cli": "7.3.0",
     "env-cmd": "10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
